fix selelr